--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^6.0.0",
     "gh-pages": "^1.2.0",
     "react": "^16.4.2",
+    "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
