--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "dotenv": "^6.0.0",
     "gh-pages": "^1.2.0",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^0.32.4",
@@ -13,7 +14,8 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.5",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "predeploy": "npm run build",
