--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.1",
     "dotenv": "^6.0.0",
     "gh-pages": "^1.2.0",
     "prop-types": "^15.6.2",
