--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.5",
+    "react-vis": "^1.11.4",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
