--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.4.0",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.1",
     "dotenv": "^6.0.0",
