--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm install && npm run build"
-  }
+  },
+  "engines": { "node": "10.x" }
 }
